--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-8.x-2.x": "2.0-dev"
+            "dev-8.x-2.x": "2.x-dev"
         }
     },
     "require": {
