--- a/timeperiod.info.yml
+++ b/timeperiod.info.yml
@@ -2,6 +2,7 @@ name: Time period
 description: Defines time period widgets and formatters to be used with Integer fields.
 package: Field types
 core: 8.x
+core_version_requirement: ^8 || ^9
 dependencies:
   - field
 type: module
